--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 node_modules
+*/node_modules
 
 # Output
 .output
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
-/build
+*/.svelte-kit
+*/build
 
 # OS
 .DS_Store
